# edinet-mcp

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  server.py
edinet_analyzer/: __main__.py  analyzer.py  config.py
test/: test_analyzer.py  test_server.py  test_utils.py
